@@ -201,8 +201,13 @@ function attachment_common_octet_stream(&$Args) {
 
     do_hook('attachment_common-load_mime_types');
 
-    ereg('\\.([^\\.]+)$', $Args[7], $Regs);
+    preg_match('/\.([^\.]+)$/', $Args[7], $Regs);
 
+    $Ext = '';
+    if (is_array($Regs) && isset($Regs[1])) {
+    	$Ext = $Regs[1];
+    }
+    
     $Ext = strtolower($Regs[1]);
 
     if ($Ext == '' || ! isset($FileExtensionToMimeType[$Ext]))
