@@ -6,6 +6,9 @@ Version 1.4.20 - SVN
 --------------------
   - Removed the shut down DSBL blocklists (#2796734).
   - Fixed broken RFC1918 reference in contrib/.htaccess and doc/.htaccess (#2798839).
+  - Updated INSTALL doc to remove possible bad system admin typos (#2827153).
+  - PHP 5.3 deprecates ereg functions (#2820952).
+  - Filters plugin uses badly formatted literals request (#2805201).
 
 Version 1.4.19 - 21 May 2009
 ----------------------------
